multi taxonomy, use updated key-value-store api