@@ -11,7 +11,7 @@
 
   <groupId>org.gbif.registry</groupId>
   <artifactId>registry-parent</artifactId>
-  <version>4.0.15-SNAPSHOT</version>
+  <version>4.0.14-multitaxonomy-SNAPSHOT</version>
   <name>GBIF Registry Parent</name>
   <description>GBIF Registry project</description>
 
@@ -88,21 +88,22 @@
     <spring-cloud-sleuth.version>2.2.8.RELEASE</spring-cloud-sleuth.version>
 
     <!-- GBIF -->
-    <gbif-api.version>2.2.0-SNAPSHOT</gbif-api.version>
+    <gbif-api.version>2.1.0-multitaxonomy-SNAPSHOT</gbif-api.version>
     <gbif-common.version>0.59</gbif-common.version>
-    <gbif-common-mybatis.version>2.0.0</gbif-common-mybatis.version>
-    <gbif-common-ws.version>2.0.7</gbif-common-ws.version>
-    <gbif-directory.version>1.13</gbif-directory.version>
-    <gbif-doi.version>3.0.0</gbif-doi.version>
-    <gbif-download-query-tools.version>2.0.0</gbif-download-query-tools.version>
+    <gbif-common-mybatis.version>2.0.1-multitaxonomy-SNAPSHOT</gbif-common-mybatis.version>
+    <gbif-common-ws.version>2.0.6</gbif-common-ws.version>
+    <gbif-directory.version>1.14</gbif-directory.version>
+    <gbif-doi.version>2.22-SNAPSHOT</gbif-doi.version>
+    <gbif-download-query-tools.version>1.53.0-multitaxonomy-java11-SNAPSHOT</gbif-download-query-tools.version>
     <gbif-httputils.version>0.10</gbif-httputils.version>
     <gbif-metadata-profile.version>2.6</gbif-metadata-profile.version>
     <gbif-parsers.version>0.67</gbif-parsers.version>
     <gbif-postal-service.version>1.8.1</gbif-postal-service.version>
     <xoai.version>4.1.0-gbif-4</xoai.version>
-    <gbif-occurrence.version>1.0.28</gbif-occurrence.version>
-    <gbif-vocabulary.version>2.0.2</gbif-vocabulary.version>
-    <checklistbank.version>3.0.0</checklistbank.version>
+    <gbif-occurrence.version>0.196.0-H3-multi-taxonomy-SNAPSHOT</gbif-occurrence.version>
+    <gbif-vocabulary.version>1.0.12</gbif-vocabulary.version>
+    <gbif-kvs.version>2.0-multitaxonomy-SNAPSHOT</gbif-kvs.version>
+    <checklistbank.version>2.127</checklistbank.version>
 
     <!-- Third party -->
     <commons-digester.version>3.2</commons-digester.version>
@@ -128,7 +129,6 @@
     <woodstox.version>4.4.1</woodstox.version>
     <zookeeper.version>3.8.1</zookeeper.version>
     <curator.version>5.5.0</curator.version>
-    <curator-framework.version>5.5.0-disable-connectstr-updates</curator-framework.version>
     <owasp-java-html-sanitizer.version>20200713.1</owasp-java-html-sanitizer.version>
     <super-csv.version>2.4.0</super-csv.version>
     <opencsv.version>5.7.1</opencsv.version>
@@ -146,8 +146,8 @@
     <junit.version>5.9.1</junit.version>
     <mockito.version>3.3.3</mockito.version>
     <xmlunit.version>2.6.3</xmlunit.version>
-    <postgresql-testcontainers.version>1.19.8</postgresql-testcontainers.version>
-    <testcontainers-elasticsearch.version>1.19.8</testcontainers-elasticsearch.version>
+    <postgresql-testcontainers.version>1.20.2</postgresql-testcontainers.version>
+    <testcontainers-elasticsearch.version>1.20.2</testcontainers-elasticsearch.version>
     <mock-javamail.version>1.9</mock-javamail.version>
     <mybatis-spring-boot-starter-test.version>2.0.0</mybatis-spring-boot-starter-test.version>
     <reflections.version>0.9.12</reflections.version>
@@ -434,6 +434,13 @@
         <version>${gbif-vocabulary.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.gbif.kvs</groupId>
+        <artifactId>kvs-rest-clients</artifactId>
+        <version>${gbif-kvs.version}</version>
+      </dependency>
+
+
       <!-- Third party dependencies -->
       <dependency>
         <groupId>org.codehaus.woodstox</groupId>
@@ -460,7 +467,7 @@
       <dependency>
         <groupId>org.apache.curator</groupId>
         <artifactId>curator-framework</artifactId>
-        <version>${curator-framework.version}</version>
+        <version>${curator.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.curator</groupId>
@@ -804,30 +811,6 @@
         <artifactId>spotless-maven-plugin</artifactId>
         <version>${spotless-maven-plugin.version}</version>
       </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-plugin.version}</version>
-        <configuration>
-          <argLine>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>${maven-failsafe-plugin.version}</version>
-        <configuration>
-          <argLine>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>${maven-release-plugin.version}</version>
-      </plugin>
     </plugins>
 
     <pluginManagement>
@@ -836,9 +819,6 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <version>${spring-boot-maven-plugin.version}</version>
-          <configuration>
-            <jvmArguments>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArguments>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
